--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,16 +2,19 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+executors:
+  # Define an executor to be used in jobs.
+  # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor
+  docker-executor:
+    docker:
+      - image: cimg/base:current
+    working_directory: ~/repo
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
+  build:
+    executor: docker-executor
 
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
@@ -19,13 +22,30 @@ jobs:
       # Checkout the code as the first step.
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Build Project"
+          command: "echo Building Project!"
+  test:
+    executor: docker-executor
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+    steps:
+      # Checkout the code as the first step.
+      - checkout
+      - run:
+          name: "Test Project"
+          command: "echo Testing Project!"
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+  deploy: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - say-hello
+      - build
+      - test:
+          requires:
+            - build # This job will run after the build job is completed successfully.
+          # filters:
+          #   branches:
+          #     only: main # This job will only run on the main branch.
