--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,16 +58,21 @@ jobs:
           role_arn: arn:aws:iam::533267095856:role/circleci
           role_session_name: app01
           session_duration: '3600'
-      - aws-ecs/update_service:
+      # - aws-ecs/update_service:
+      #     cluster: bgdemo-demo-nonprod
+      #     container_image_name_updates: container=nginx-bg-dev,tag=1.28.0
+      #     family: nginx-bg-dev
+      #     region: us-east-1
+      - aws-ecs/deploy_service_update:
+          auth:
+            - aws-cli/setup:
+                role_arn: arn:aws:iam::123456789012:role/VALID_OIDC_ECS_ROLE
           cluster: bgdemo-demo-nonprod
+          service_name: nginx-bg-dev-green
           container_image_name_updates: container=nginx-bg-dev,tag=1.28.0
           family: nginx-bg-dev
           region: us-east-1
-      - aws-ecs/deploy_service_update:
-          cluster: bgdemo-demo-nonprod
-          family: nginx-bg-dev
-          service_name: nginx-bg-dev-green
-          region: us-east-1
+          desired_count: 1
       
 
 # Orchestrate jobs using workflows
